@@ -29,13 +29,10 @@ import com.clenzy.repository.InterventionRepository;
 import com.clenzy.repository.TeamRepository;
 import com.clenzy.model.Team;
 import com.clenzy.model.NotificationKey;
-import com.clenzy.config.KafkaConfig;
 import com.clenzy.service.pricing.CleaningPricingEngine;
 import com.clenzy.service.pricing.CleaningPricingEngine.ResolvedCleaningPrice;
 import com.clenzy.tenant.TenantContext;
-import com.clenzy.util.InterventionTypeMatcher;
 import org.springframework.dao.DataIntegrityViolationException;
-import org.springframework.kafka.core.KafkaTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.security.oauth2.jwt.Jwt;
@@ -61,6 +58,7 @@ public class ServiceRequestService {
 
     private static final Logger log = LoggerFactory.getLogger(ServiceRequestService.class);
     public static final int MAX_AUTO_ASSIGN_RETRIES = 10;
+    public static final String MANUAL_ASSIGNMENT_HOLD = "manual_hold";
 
     /** Prefixe de la cle d'idempotence des menages auto post-checkout (fiche 08, F1a). */
     public static final String AUTO_CLEANING_KEY_PREFIX = "AUTO_CLEANING";
@@ -74,7 +72,7 @@ public class ServiceRequestService {
     private final TeamRepository teamRepository;
     private final NotificationService notificationService;
     private final PropertyTeamService propertyTeamService;
-    private final KafkaTemplate<String, Object> kafkaTemplate;
+    private final DocumentGenerationOutbox documentOutbox;
     private final TenantContext tenantContext;
     private final ServiceRequestMapper serviceRequestMapper;
     private final AssignmentEventRepository assignmentEventRepository;
@@ -88,6 +86,10 @@ public class ServiceRequestService {
     private final com.clenzy.service.agent.supervision.AutoApplyGate autoApplyGate;
     private final com.clenzy.service.access.OrganizationAccessGuard organizationAccessGuard;
 
+    private final com.clenzy.service.InterventionAllocationGuard allocationGuard;
+    private final ServiceRequestCancellationCoordination cancellationCoordination;
+    private final com.clenzy.service.assignment.ServiceAssignmentService assignments;
+
     public ServiceRequestService(ServiceRequestRepository serviceRequestRepository,
                                   UserRepository userRepository,
                                   PropertyRepository propertyRepository,
@@ -96,7 +98,7 @@ public class ServiceRequestService {
                                   TeamRepository teamRepository,
                                   NotificationService notificationService,
                                   PropertyTeamService propertyTeamService,
-                                  KafkaTemplate<String, Object> kafkaTemplate,
+                                  DocumentGenerationOutbox documentOutbox,
                                   TenantContext tenantContext,
                                   ServiceRequestMapper serviceRequestMapper,
                                   AssignmentEventRepository assignmentEventRepository,
@@ -108,7 +110,12 @@ public class ServiceRequestService {
                                   @org.springframework.context.annotation.Lazy
                                   com.clenzy.service.agent.supervision.SupervisionAutoApplyService supervisionAutoApplyService,
                                   com.clenzy.service.agent.supervision.AutoApplyGate autoApplyGate,
-                                  com.clenzy.service.access.OrganizationAccessGuard organizationAccessGuard) {
+                                  com.clenzy.service.access.OrganizationAccessGuard organizationAccessGuard, com.clenzy.service.InterventionAllocationGuard allocationGuard,
+                                  ServiceRequestCancellationCoordination cancellationCoordination,
+                                  com.clenzy.service.assignment.ServiceAssignmentService assignments) {
+        this.assignments = assignments;
+        this.cancellationCoordination = cancellationCoordination;
+        this.allocationGuard = allocationGuard;
         this.serviceRequestRepository = serviceRequestRepository;
         this.userRepository = userRepository;
         this.propertyRepository = propertyRepository;
@@ -117,7 +124,7 @@ public class ServiceRequestService {
         this.teamRepository = teamRepository;
         this.notificationService = notificationService;
         this.propertyTeamService = propertyTeamService;
-        this.kafkaTemplate = kafkaTemplate;
+        this.documentOutbox = documentOutbox;
         this.tenantContext = tenantContext;
         this.serviceRequestMapper = serviceRequestMapper;
         this.assignmentEventRepository = assignmentEventRepository;
@@ -141,9 +148,47 @@ public class ServiceRequestService {
     }
 
     public ServiceRequestDto create(ServiceRequestDto dto) {
+        return createWithFlowKey(dto, null);
+    }
+
+    /** Idempotent entry into the same workflow for a multi-service form submission. */
+    @org.springframework.transaction.annotation.Transactional(propagation = org.springframework.transaction.annotation.Propagation.MANDATORY)
+    public ServiceRequestDto createComposedRequest(ServiceRequestDto dto, java.util.UUID submissionId) {
+        String key = "COMPOSER:" + submissionId + ":" + dto.serviceItemCode;
+        serviceRequestRepository.acquireAutoFlowKeyLock(key);
+        var existing = serviceRequestRepository.findByAutoFlowKey(key, tenantContext.getRequiredOrganizationId());
+        if (existing.isPresent()) {
+            var previous = existing.get();
+            if (!java.util.Objects.equals(previous.getUser().getId(), dto.userId)
+                    || !java.util.Objects.equals(previous.getProperty() == null ? null : previous.getProperty().getId(), dto.propertyId)
+                    || !java.util.Objects.equals(previous.getDesiredDate(), dto.desiredDate)
+                    || !java.util.Objects.equals(previous.getDescription(), dto.description)
+                    || !java.util.Objects.equals(previous.getEstimatedDurationHours(), dto.estimatedDurationHours)
+                    || !java.util.Objects.equals(previous.getPriority(), dto.priority))
+                throw new IllegalStateException("Cette demande a déjà été créée. Consultez-la avant de modifier les informations.");
+            return serviceRequestMapper.toDto(previous);
+        }
+        return createWithFlowKey(dto, key);
+    }
+
+    /** Réutilise le parcours PMS, dans la transaction de l'échéancier. */
+    @org.springframework.transaction.annotation.Transactional(propagation = org.springframework.transaction.annotation.Propagation.MANDATORY)
+    public Long createRecurringRequest(ServiceRequestDto dto, Long sourceQuoteId) {
+        String key = "MARKETPLACE_RECURRENCE:" + sourceQuoteId + ":" + dto.desiredDate.toLocalDate();
+        serviceRequestRepository.acquireAutoFlowKeyLock(key);
+        var existing = serviceRequestRepository.findByAutoFlowKey(key, tenantContext.getRequiredOrganizationId());
+        if (existing.isPresent()) return existing.get().getId();
+        return createWithFlowKey(dto, key).id;
+    }
+
+    private ServiceRequestDto createWithFlowKey(ServiceRequestDto dto, String flowKey) {
         ServiceRequest entity = new ServiceRequest();
         serviceRequestMapper.apply(dto, entity);
+        entity.setAutoFlowKey(flowKey);
         entity.setOrganizationId(tenantContext.getRequiredOrganizationId());
+        if (entity.getProperty() != null)
+            organizationAccessGuard.requireSameOrganization(entity.getProperty().getOrganizationId(),"Logement hors organisation");
+        if (entity.getAssignedToId() != null) requireAvailableAssignment(entity, entity.getAssignedToId(), entity.getAssignedToType());
         entity = serviceRequestRepository.save(entity);
 
         try {
@@ -157,8 +202,13 @@ public class ServiceRequestService {
             log.warn("Notification error SERVICE_REQUEST_CREATED: {}", e.getMessage());
         }
 
-        // ── Auto-assignation basee sur zone geographique + disponibilite ──
-        attemptAutoAssign(entity);
+        Long initialTarget = entity.getAssignedToId();
+        String initialKind = entity.getAssignedToType();
+        entity.setAssignedToId(null);
+        entity.setAssignedToType(null);
+        entity.setStatus(RequestStatus.PENDING);
+        if (initialTarget != null) assignments.propose(entity.getId(),entity.getOrganizationId(),initialKind,initialTarget);
+        else assignments.initialize(entity);
 
         return serviceRequestMapper.toDto(entity);
     }
@@ -168,9 +218,15 @@ public class ServiceRequestService {
      * Remet la SR en PENDING pour reassignation.
      */
     public ServiceRequestDto refuse(Long serviceRequestId) {
-        ServiceRequest sr = serviceRequestRepository.findById(serviceRequestId)
+        ServiceRequest sr = serviceRequestRepository.findForMutation(serviceRequestId)
                 .orElseThrow(() -> new NotFoundException("Demande de service non trouvee"));
         requireOwnedServiceRequest(sr);
+        if (sr.getAssignmentPhase()!=null)
+            throw new IllegalStateException("Répondez à la proposition depuis l'écran des propositions de service");
+        requireDirectControl(sr);
+        if (sr.getPaidAt() != null || interventionRepository.existsByServiceRequestId(sr.getId()))
+            throw new IllegalStateException("La mission existante doit être modifiée depuis son parcours d'affectation");
+
 
         if (!RequestStatus.AWAITING_PAYMENT.equals(sr.getStatus()) && !RequestStatus.ASSIGNED.equals(sr.getStatus())) {
             throw new IllegalStateException("Seules les demandes assignees peuvent etre refusees. Statut actuel: " + sr.getStatus());
@@ -205,6 +261,16 @@ public class ServiceRequestService {
         }
 
         return serviceRequestMapper.toDto(sr);
+    }
+
+    public void requireRefusalRecipient(Long id,org.springframework.security.oauth2.jwt.Jwt jwt) {
+        var need=serviceRequestRepository.findForMutation(id).orElseThrow(() -> new NotFoundException("Demande introuvable"));
+        requireOwnedServiceRequest(need);
+        Long user=assignments.currentUser(jwt);
+        boolean recipient="user".equals(need.getAssignedToType()) ? java.util.Objects.equals(user,need.getAssignedToId())
+            : "team".equals(need.getAssignedToType()) && teamRepository.findById(need.getAssignedToId())
+                .map(team -> team.getMembers().stream().anyMatch(member -> member.getUser()!=null && user.equals(member.getUser().getId()))).orElse(false);
+        if (!recipient) throw new org.springframework.security.access.AccessDeniedException("Vous n'êtes pas destinataire de cette demande");
     }
 
     /**
@@ -263,7 +329,7 @@ public class ServiceRequestService {
      * @return true si la demande est assignée (déjà ou suite à cette tentative)
      */
     public boolean retryAutoAssignForSupervision(Long organizationId, Long serviceRequestId) {
-        ServiceRequest sr = serviceRequestRepository.findById(serviceRequestId)
+        ServiceRequest sr = serviceRequestRepository.findForMutation(serviceRequestId)
                 .orElseThrow(() -> new NotFoundException("Demande de service non trouvee"));
         // findById contourne le filtre org (règle audit n°3) → garde explicite.
         if (organizationId == null || !organizationId.equals(sr.getOrganizationId())) {
@@ -295,19 +361,20 @@ public class ServiceRequestService {
         ServiceRequest sr = serviceRequestRepository.findById(serviceRequestId)
                 .orElseThrow(() -> new NotFoundException("Demande de service non trouvee"));
         requireOwnedServiceRequest(sr);
-        final String serviceType = sr.getServiceType() == null ? null : sr.getServiceType().name();
+        final String serviceType = sr.getServiceItemCode();
         // Le type requis accompagne TOUJOURS la reponse : c'est quand la liste
         // est vide qu'il compte le plus, et c'est precisement la que l'ecran
         // n'avait rien a dire.
-        final String requiredTeamType = InterventionTypeMatcher.requiredTeamType(serviceType);
+        final String requiredTeamType = serviceType;
 
-        if (sr.getProperty() == null || date == null) {
+        if ((sr.getProperty() == null && !allocationGuard.isRemote(serviceType)) || date == null) {
             return new PropertyTeamService.AssignableTeams(List.of(), requiredTeamType);
         }
         return new PropertyTeamService.AssignableTeams(
                 propertyTeamService.findAssignableTeams(
-                        sr.getProperty().getId(), date, sr.getEstimatedDurationHours(),
-                        serviceType, sr.getOrganizationId()),
+                        sr.getProperty() == null ? null : sr.getProperty().getId(), date, sr.getEstimatedDurationHours(),
+                        serviceType, sr.getOrganizationId(), sr.getId(),
+                        null),
                 requiredTeamType);
     }
 
@@ -324,15 +391,22 @@ public class ServiceRequestService {
      * réservé au staff plateforme.</p>
      */
     public ServiceRequestDto cancel(Long serviceRequestId, String reason) {
-        ServiceRequest sr = serviceRequestRepository.findById(serviceRequestId)
+        ServiceRequest sr = serviceRequestRepository.findForMutation(serviceRequestId)
                 .orElseThrow(() -> new NotFoundException("Demande de service non trouvee"));
         requireOwnedServiceRequest(sr);
+        requireDirectControl(sr);
 
         if (!sr.getStatus().canTransitionTo(RequestStatus.CANCELLED)) {
             throw new IllegalStateException(
                     "Une demande " + sr.getStatus() + " ne peut plus etre annulee.");
         }
 
+        var linkedMission = cancellationCoordination.requireLegacyCancellationAllowed(sr);
+        if (sr.getAssignmentPhase() != null && linkedMission == null) {
+            assignments.withdraw(sr.getId(),sr.getOrganizationId(),"Demande annulée");
+            sr.setAssignmentPhase("CANCELLED");
+        }
+        if (linkedMission != null) linkedMission.setStatus(InterventionStatus.CANCELLED);
         sr.setStatus(RequestStatus.CANCELLED);
         // La recherche d'équipe s'arrête avec elle : sans ce reset, le scheduler
         // continuerait de la compter dans ses tentatives.
@@ -373,15 +447,29 @@ public class ServiceRequestService {
         if (desiredDate == null) {
             throw new IllegalArgumentException("Une date d'intervention est requise.");
         }
-        ServiceRequest previous = serviceRequestRepository.findById(serviceRequestId)
+        ServiceRequest previous = serviceRequestRepository.findForMutation(serviceRequestId)
                 .orElseThrow(() -> new NotFoundException("Demande de service non trouvee"));
         requireOwnedServiceRequest(previous);
+        requireDirectControl(previous);
+        cancellationCoordination.requireLegacyCancellationAllowed(previous);
+        if (previous.getAssignmentPhase()!=null) {
+            assignments.withdraw(previous.getId(),previous.getOrganizationId(),
+                    reason==null || reason.isBlank()?"Créneau modifié":reason.strip());
+            previous.setAssignmentCycle(previous.getAssignmentCycle()+1);
+            previous.setDesiredDate(desiredDate);
+            previous.setReservationId(reservationId);
+            serviceRequestRepository.saveAndFlush(previous);
+            if (assignedToId!=null) assignments.propose(previous.getId(),previous.getOrganizationId(),assignedToType,assignedToId);
+            else assignments.resume(previous.getId(),previous.getOrganizationId());
+            return serviceRequestMapper.toDto(previous);
+        }
 
         ServiceRequest next = new ServiceRequest();
         next.setOrganizationId(previous.getOrganizationId());
         next.setTitle(previous.getTitle());
         next.setDescription(previous.getDescription());
         next.setServiceType(previous.getServiceType());
+        next.setServiceItemCode(previous.getServiceItemCode());
         next.setPriority(previous.getPriority());
         next.setEstimatedDurationHours(previous.getEstimatedDurationHours());
         next.setEstimatedCost(previous.getEstimatedCost());
@@ -398,13 +486,12 @@ public class ServiceRequestService {
         }
         next = serviceRequestRepository.save(next);
 
-        // Le prestataire choisi vaut assignation : la demande part directement en
-        // attente de paiement, sans repasser par la recherche automatique.
+        // Le prestataire choisi reçoit une proposition, sans nouvelle recherche automatique.
         if (assignedToId != null && assignedToType != null) {
             manualAssign(next.getId(), assignedToId, assignedToType);
             next = serviceRequestRepository.findById(next.getId()).orElse(next);
         } else {
-            attemptAutoAssign(next);
+            assignments.initialize(next);
         }
 
         cancel(previous.getId(), reason == null || reason.isBlank()
@@ -418,49 +505,70 @@ public class ServiceRequestService {
     /**
      * Assignation manuelle par un admin/manager.
      */
+    private void requireAvailableAssignment(ServiceRequest request, Long targetId, String targetType) {
+        if (allocationGuard.isUnscheduled(request.getServiceItemCode())) {
+            allocationGuard.requireUnscheduledAssignment(request,targetType,targetId);
+            return;
+        }
+        if (serviceRequestRepository.assignmentConflicts(request.getId(), targetType, targetId,
+                request.getDesiredDate(), request.getEstimatedDurationHours())) {
+            throw new com.clenzy.exception.AssignmentConflictException();
+        }
+        if (!allocationGuard.isRemote(request.getServiceItemCode()))
+            allocationGuard.requirePropertyAllowed(targetType, targetId, request.getProperty());
+        if ("team".equals(targetType) && !allocationGuard.isTeamDeclaredAvailable(targetId,
+                request.getDesiredDate(), request.getEstimatedDurationHours())) {
+            throw new com.clenzy.exception.AssignmentConflictException(
+                    "L'équipe est indisponible sur ce créneau. Choisissez un autre créneau ou prestataire.");
+        }
+        if ("user".equals(targetType) && !allocationGuard.isUserDeclaredAvailable(targetId,
+                request.getDesiredDate(), request.getEstimatedDurationHours())) {
+            throw new com.clenzy.exception.AssignmentConflictException("Le prestataire est indisponible sur ce créneau.");
+        }
+        allocationGuard.requireDocumentaryAssignment(request, targetType, targetId);
+    }
+
     public ServiceRequestDto manualAssign(Long serviceRequestId, Long assignedToId, String assignedToType) {
-        ServiceRequest sr = serviceRequestRepository.findById(serviceRequestId)
+        if (assignedToId==null || assignedToId<=0 || assignedToType==null || !java.util.Set.of("team","user").contains(assignedToType))
+            throw new IllegalArgumentException("Prestataire invalide");
+        ServiceRequest sr = serviceRequestRepository.findForMutation(serviceRequestId)
+            .orElseThrow(() -> new NotFoundException("Demande introuvable"));
+        requireOwnedServiceRequest(sr);
+        requireDirectControl(sr);
+        if (sr.getPaidAt() != null || sr.getConvertedInterventionId() != null
+                || interventionRepository.existsByServiceRequestId(sr.getId()))
+            throw new IllegalStateException("La mission existante doit être modifiée depuis son parcours d'affectation");
+        assignments.propose(serviceRequestId,sr.getOrganizationId(),assignedToType,assignedToId);
+        return serviceRequestMapper.toDto(sr);
+    }
+
+    /** Retrait volontaire : l'automatisation ne doit pas annuler la décision humaine. */
+    public ServiceRequestDto unassign(Long serviceRequestId) {
+        ServiceRequest sr = serviceRequestRepository.findForMutation(serviceRequestId)
                 .orElseThrow(() -> new NotFoundException("Demande de service non trouvee"));
         requireOwnedServiceRequest(sr);
-
-        if (!RequestStatus.PENDING.equals(sr.getStatus()) && !RequestStatus.AWAITING_PAYMENT.equals(sr.getStatus()) && !RequestStatus.ASSIGNED.equals(sr.getStatus())) {
-            throw new IllegalStateException("Seules les demandes en attente ou en attente de paiement peuvent etre (re)assignees manuellement. Statut actuel: " + sr.getStatus());
+        requireDirectControl(sr);
+        if (sr.getAssignmentPhase() != null) {
+            assignments.withdraw(serviceRequestId,sr.getOrganizationId(),"Retrait par le gestionnaire");
+            return serviceRequestMapper.toDto(sr);
         }
-
-        sr.setAssignedToId(assignedToId);
-        sr.setAssignedToType(assignedToType);
-        // Moteur Ménage 2A : assignation d'un PRO sur une SR ménage non payée
-        // (garde de statut ci-dessus : PENDING/AWAITING_PAYMENT/ASSIGNED) →
-        // le prix pratiqué suit son tarif. Le conseil (recommendedCost) est INCHANGÉ.
-        if ("user".equals(assignedToType) && sr.getPaidAt() == null
-                && sr.getProperty() != null
-                && sr.getServiceType() != null && sr.getServiceType().isCleaningService()) {
-            var resolved = cleaningPricingEngine.resolveCleaningPrice(
-                    sr.getProperty(), sr.getServiceType().name(), assignedToId);
-            if (resolved.source() == com.clenzy.service.pricing.CleaningPricingEngine.CleaningPriceSource.HOUSEKEEPER_RATE) {
-                sr.setEstimatedCost(resolved.amount());
-                log.info("SR {} : cout reevalue au tarif du pro {} → {}", sr.getId(), assignedToId, resolved.amount());
-            }
+        if (sr.getStatus() != RequestStatus.PENDING && sr.getStatus() != RequestStatus.ASSIGNED) {
+            throw new IllegalStateException("Seule une demande en attente ou assignée peut être désaffectée");
         }
-        // ASSIGNÉE — surtout pas « en attente de paiement ».
-        //
-        // Le statut basculait ici, à l'ASSIGNATION : la demande devenait payable
-        // avant que quiconque ait touché au chantier. Deux conséquences. On
-        // réclamait le solde d'un travail non commencé ; et la demande quittant
-        // PENDING, la carte d'ACOMPTE — qui n'a de sens qu'avant les travaux —
-        // disparaissait. Les deux échéances s'inversaient.
-        //
-        // Le solde ne devient dû qu'après le contrôle du travail rendu, quand un
-        // gestionnaire a vu les photos, la durée réelle et l'écart au créneau.
-        sr.setStatus(RequestStatus.ASSIGNED);
-        sr.setAutoAssignStatus("found");
+        if (sr.getPaidAt() != null || interventionRepository.existsByServiceRequestId(sr.getId())) {
+            throw new IllegalStateException("Une mission créée ou payée nécessite une révision de son affectation");
+        }
+        if (MANUAL_ASSIGNMENT_HOLD.equals(sr.getAutoAssignStatus()) && sr.getAssignedToId() == null) {
+            return serviceRequestMapper.toDto(sr);
+        }
+        Long previousId = sr.getAssignedToId();
+        String previousType = sr.getAssignedToType();
+        sr.setAssignedToId(null);
+        sr.setAssignedToType(null);
+        sr.setStatus(RequestStatus.PENDING);
+        sr.setAutoAssignStatus(MANUAL_ASSIGNMENT_HOLD);
         sr = serviceRequestRepository.save(sr);
-
-        logAssignmentEvent(sr, "MANUAL_ASSIGN", assignedToId, assignedToType,
-            "Assignation manuelle par admin/manager");
-
-        log.info("Manual assignment: {} {} for SR {}", assignedToType, assignedToId, sr.getId());
-
+        logAssignmentEvent(sr, "MANUAL_UNASSIGN", previousId, previousType, "Affectation retirée ; recherche automatique suspendue");
         return serviceRequestMapper.toDto(sr);
     }
 
@@ -469,114 +577,91 @@ public class ServiceRequestService {
      * Appelee apres confirmation du paiement Stripe.
      */
     public Intervention createInterventionFromPaidServiceRequest(ServiceRequest sr) {
-        if (interventionRepository.existsByServiceRequestId(sr.getId())) {
-            log.warn("Intervention already exists for SR {} — skipping creation", sr.getId());
-            return null;
+        throw new IllegalStateException("La création d'une intervention nécessite l'accord du prestataire, pas un paiement");
+    }
+
+    private void requireCurrentVersion(ServiceRequest entity, Long version) {
+        if (version == null || version.longValue() != entity.getVersion()) {
+            throw new org.springframework.orm.ObjectOptimisticLockingFailureException(ServiceRequest.class, entity.getId());
         }
+    }
 
-        Intervention intervention = new Intervention();
-        String title = sr.getTitle();
-        intervention.setTitle(title != null && title.length() > 255 ? title.substring(0, 255) : title);
-        String description = sr.getDescription();
-        intervention.setDescription(description != null && description.length() > 500 ? description.substring(0, 500) : description);
-
-        String interventionType = mapServiceTypeToInterventionType(sr.getServiceType());
-        intervention.setType(interventionType);
-
-        intervention.setStatus(InterventionStatus.PENDING);
-        intervention.setPaymentStatus(com.clenzy.model.PaymentStatus.PAID);
-        intervention.setPaidAt(sr.getPaidAt());
-        intervention.setPriority(sr.getPriority().name());
-        intervention.setProperty(sr.getProperty());
-        intervention.setRequestor(sr.getUser());
-        intervention.setServiceRequest(sr);
-        intervention.setScheduledDate(sr.getDesiredDate());
-        intervention.setEstimatedDurationHours(sr.getEstimatedDurationHours());
-        intervention.setEstimatedCost(sr.getEstimatedCost());
-        intervention.setRecommendedCost(sr.getRecommendedCost());
-        intervention.setIsUrgent(sr.isUrgent());
-        intervention.setStartTime(sr.getDesiredDate());
-        intervention.setRequiresFollowUp(false);
-
-        // Assigner la meme equipe/user que la SR
-        if ("team".equals(sr.getAssignedToType()) && sr.getAssignedToId() != null) {
-            intervention.setTeamId(sr.getAssignedToId());
-        } else if ("user".equals(sr.getAssignedToType()) && sr.getAssignedToId() != null) {
-            User assignedUser = userRepository.findById(sr.getAssignedToId()).orElse(null);
-            if (assignedUser != null) {
-                intervention.setAssignedUser(assignedUser);
-                intervention.setAssignedTechnicianId(sr.getAssignedToId());
-            }
+    private void requireEditableStatusChange(ServiceRequest entity, RequestStatus status) {
+        if (status == null || status == entity.getStatus()) return;
+        if (!entity.getStatus().canTransitionTo(status)
+                || (status != RequestStatus.REJECTED && status != RequestStatus.CANCELLED)) {
+            throw new IllegalStateException("Utilisez les actions de la mission pour modifier son avancement");
         }
-
-        intervention.setOrganizationId(sr.getOrganizationId());
-        intervention = interventionRepository.save(intervention);
-        log.info("Intervention {} created from paid SR {}", intervention.getId(), sr.getId());
-
-        // Lier l'intervention a la reservation associee (pour affichage planning)
-        if (sr.getReservationId() != null) {
-            try {
-                Reservation reservation = reservationRepository.findById(sr.getReservationId()).orElse(null);
-                if (reservation != null) {
-                    reservation.setIntervention(intervention);
-                    reservationRepository.save(reservation);
-                    log.info("Intervention {} linked to reservation {}", intervention.getId(), sr.getReservationId());
-                }
-            } catch (Exception e) {
-                log.warn("Failed to link intervention {} to reservation {}: {}", intervention.getId(), sr.getReservationId(), e.getMessage());
-            }
+        if (entity.getPaidAt() != null || interventionRepository.existsByServiceRequestId(entity.getId())) {
+            throw new IllegalStateException("Une mission créée ou payée nécessite une révision dédiée");
         }
+    }
 
-        // Generation FACTURE via Kafka
-        try {
-            String emailTo = sr.getUser() != null ? sr.getUser().getEmail() : null;
-            kafkaTemplate.send(
-                KafkaConfig.TOPIC_DOCUMENT_GENERATE,
-                "facture-sr-" + sr.getId(),
-                Map.of(
-                    "documentType", "FACTURE",
-                    "referenceId", sr.getId(),
-                    "referenceType", "service_request",
-                    "emailTo", emailTo != null ? emailTo : ""
-                )
-            );
-        } catch (Exception e) {
-            log.warn("Kafka publish error FACTURE for SR {}: {}", sr.getId(), e.getMessage());
+    public ServiceRequestDto changeStatus(Long id, Long version, RequestStatus status) {
+        ServiceRequest entity = serviceRequestRepository.findForMutation(id)
+                .orElseThrow(() -> new NotFoundException("Service request not found"));
+        requireOwnedServiceRequest(entity);
+        requireDirectControl(entity);
+        requireCurrentVersion(entity, version);
+        if (status == null) throw new IllegalArgumentException("Statut requis");
+        requireEditableStatusChange(entity, status);
+        if (status == entity.getStatus()) return serviceRequestMapper.toDto(entity);
+        if (status == RequestStatus.CANCELLED) {
+            cancel(id, null);
+            serviceRequestRepository.flush();
+            return serviceRequestMapper.toDto(entity);
         }
-
-        // Notifier les admins
-        try {
-            notificationService.notifyAdminsAndManagers(
-                NotificationKey.INTERVENTION_AWAITING_VALIDATION,
-                "Intervention creee apres paiement",
-                "L'intervention \"" + intervention.getTitle() + "\" a ete creee suite au paiement de la demande de service."
-                    + (intervention.getEstimatedCost() != null
-                        ? " Cout estime: " + intervention.getEstimatedCost().stripTrailingZeros().toPlainString() + " EUR."
-                        : ""),
-                "/interventions/" + intervention.getId(),
-                // Ici la notification parle de l'INTERVENTION nee de la demande :
-                // ce sont ses reperes a elle qui doivent mener la fiche.
-                NotificationMetadata.of()
-                    .property(sr.getProperty() != null ? sr.getProperty().getName() : null)
-                    .propertyId(sr.getProperty() != null ? sr.getProperty().getId() : null)
-                    .request(sr.getTitle())
-                    .serviceRequestId(sr.getId())
-                    .intervention(intervention.getTitle())
-                    .interventionId(intervention.getId())
-                    .build());
-        } catch (Exception e) {
-            log.warn("Notification error INTERVENTION_CREATED_FROM_SR: {}", e.getMessage());
-        }
-
-        return intervention;
+        entity.setStatus(status);
+        entity.setAutoAssignStatus(null);
+        entity = serviceRequestRepository.save(entity);
+        serviceRequestRepository.flush();
+        notifyRequestRejected(entity);
+        return serviceRequestMapper.toDto(entity);
     }
 
     public ServiceRequestDto update(Long id, ServiceRequestDto dto) {
-        ServiceRequest entity = serviceRequestRepository.findById(id).orElseThrow(() -> new NotFoundException("Service request not found"));
+        ServiceRequest entity = serviceRequestRepository.findForMutation(id).orElseThrow(() -> new NotFoundException("Service request not found"));
+        requireOwnedServiceRequest(entity);
+        requireDirectControl(entity);
+        requireCurrentVersion(entity, dto.version);
+        if (entity.getPaidAt() != null || interventionRepository.existsByServiceRequestId(id)) {
+            throw new IllegalStateException("Une mission créée ou payée nécessite une révision dédiée");
+        }
+        requireEditableStatusChange(entity, dto.status);
+        RequestStatus previousStatus = entity.getStatus();
+        if (entity.getAssignmentPhase() != null) {
+            assignments.withdraw(id,entity.getOrganizationId(),"Informations de la demande modifiées");
+            entity.setAssignmentCycle(entity.getAssignmentCycle()+1);
+        }
+        Long previousAssignee = entity.getAssignedToId();
+        String previousType = entity.getAssignedToType();
         serviceRequestMapper.apply(dto, entity);
+        if (entity.getAssignmentPhase()!=null && entity.getStatus()!=RequestStatus.REJECTED
+                && entity.getStatus()!=RequestStatus.CANCELLED) entity.setStatus(RequestStatus.PENDING);
+        // Les changements de cible passent par les mêmes règles que le dialogue dédié.
+        if (entity.getProperty() != null) {
+            organizationAccessGuard.requireSameOrganization(entity.getProperty().getOrganizationId(), "Logement hors organisation");
+        }
+        entity.setAssignedToId(previousAssignee);
+        entity.setAssignedToType(previousType);
+        boolean assignmentChanged = !java.util.Objects.equals(dto.assignedToId, previousAssignee)
+                || !java.util.Objects.equals(dto.assignedToType, previousType);
+        if (assignmentChanged) {
+            if (dto.assignedToId == null) unassign(id);
+            else manualAssign(id, dto.assignedToId, dto.assignedToType);
+        } else if (entity.getAssignedToId() != null) {
+            requireAvailableAssignment(entity, entity.getAssignedToId(), entity.getAssignedToType());
+        }
+        if (entity.getStatus() == RequestStatus.REJECTED || entity.getStatus() == RequestStatus.CANCELLED) {
+            entity.setAutoAssignStatus(null);
+        }
         entity = serviceRequestRepository.save(entity);
-        ServiceRequestDto result = serviceRequestMapper.toDto(entity);
+        serviceRequestRepository.flush();
+        if (previousStatus != entity.getStatus()) notifyRequestRejected(entity);
+        return serviceRequestMapper.toDto(entity);
+    }
 
+    private void notifyRequestRejected(ServiceRequest entity) {
         // Notify requester if the status changed to REJECTED
         try {
             if (RequestStatus.REJECTED.equals(entity.getStatus()) && entity.getUser() != null && entity.getUser().getKeycloakId() != null) {
@@ -592,7 +677,6 @@ public class ServiceRequestService {
             log.warn("Notification error SERVICE_REQUEST_REJECTED: {}", e.getMessage());
         }
 
-        return result;
     }
 
     @Transactional(readOnly = true)
@@ -600,26 +684,27 @@ public class ServiceRequestService {
         ServiceRequest sr = serviceRequestRepository.findById(id)
                 .orElseThrow(() -> new NotFoundException("Service request not found"));
         requireOwnedServiceRequest(sr);
-        return serviceRequestMapper.toDto(sr);
+        return readDtosWithMissionAssignment(List.of(sr)).get(0);
     }
 
     @Transactional(readOnly = true)
     public List<ServiceRequestDto> list() {
-        return serviceRequestRepository.findAllWithRelations(tenantContext.getRequiredOrganizationId()).stream().map(serviceRequestMapper::toDto).collect(Collectors.toList());
+        return readDtosWithMissionAssignment(serviceRequestRepository.findAllWithRelations(tenantContext.getRequiredOrganizationId())
+                .stream().filter(sr -> !"CONVERTED".equals(sr.getAssignmentPhase())).toList());
     }
 
     @Transactional(readOnly = true)
     public Page<ServiceRequestDto> list(Pageable pageable) {
         // Pour la pagination, on doit d'abord récupérer les IDs puis charger avec relations
-        Page<ServiceRequest> page = serviceRequestRepository.findAll(pageable);
-        List<ServiceRequest> withRelations = serviceRequestRepository.findAllWithRelations(tenantContext.getRequiredOrganizationId());
+        List<ServiceRequest> withRelations = serviceRequestRepository.findAllWithRelations(tenantContext.getRequiredOrganizationId())
+                .stream().filter(sr -> !"CONVERTED".equals(sr.getAssignmentPhase())).toList();
 
         // Filtrer selon la pagination
-        int start = (int) pageable.getOffset();
+        int start = (int) Math.min(pageable.getOffset(), withRelations.size());
         int end = Math.min(start + pageable.getPageSize(), withRelations.size());
         List<ServiceRequest> pageContent = withRelations.subList(start, end);
 
-        return new PageImpl<>(pageContent.stream().map(serviceRequestMapper::toDto).collect(Collectors.toList()), pageable, page.getTotalElements());
+        return new PageImpl<>(readDtosWithMissionAssignment(pageContent), pageable, withRelations.size());
     }
 
     @Transactional(readOnly = true)
@@ -628,7 +713,7 @@ public class ServiceRequestService {
         List<ServiceRequest> allWithRelations = serviceRequestRepository.findAllWithRelations(tenantContext.getRequiredOrganizationId());
 
         // Filtrer selon les critères
-        List<ServiceRequest> filtered = allWithRelations.stream()
+        List<ServiceRequest> filtered = allWithRelations.stream().filter(sr -> !"CONVERTED".equals(sr.getAssignmentPhase()))
             .filter(sr -> userId == null || (sr.getUser() != null && sr.getUser().getId().equals(userId)))
             .filter(sr -> propertyId == null || (sr.getProperty() != null && sr.getProperty().getId().equals(propertyId)))
             .filter(sr -> status == null || sr.getStatus().equals(status))
@@ -636,11 +721,11 @@ public class ServiceRequestService {
             .collect(Collectors.toList());
 
         // Appliquer la pagination
-        int start = (int) pageable.getOffset();
+        int start = (int) Math.min(pageable.getOffset(), filtered.size());
         int end = Math.min(start + pageable.getPageSize(), filtered.size());
         List<ServiceRequest> pageContent = filtered.subList(start, end);
 
-        return new PageImpl<>(pageContent.stream().map(serviceRequestMapper::toDto).collect(Collectors.toList()), pageable, filtered.size());
+        return new PageImpl<>(readDtosWithMissionAssignment(pageContent), pageable, filtered.size());
     }
 
     @Transactional(readOnly = true)
@@ -649,7 +734,14 @@ public class ServiceRequestService {
                                                              com.clenzy.model.RequestStatus status,
                                                              com.clenzy.model.ServiceType serviceType,
                                                              Jwt jwt) {
+        return searchWithRoleBasedAccess(pageable, userId, propertyId, reservationId, status, serviceType, jwt, false);
+    }
+
+    @Transactional(readOnly = true)
+    public Page<ServiceRequestDto> searchWithRoleBasedAccess(Pageable pageable, Long userId, Long propertyId,
+            Long reservationId, RequestStatus status, ServiceType serviceType, Jwt jwt, boolean activeOnly) {
         if (jwt == null) {
+            if (activeOnly) throw new org.springframework.security.access.AccessDeniedException("Authentification requise");
             // Si pas de JWT, utiliser la méthode standard
             return search(pageable, userId, propertyId, status, serviceType);
         }
@@ -658,10 +750,12 @@ public class ServiceRequestService {
         log.debug("searchWithRoleBasedAccess - Role: {}", userRole);
 
         // Utiliser la méthode avec relations et filtrer ensuite
-        List<ServiceRequest> allWithRelations = serviceRequestRepository.findAllWithRelations(tenantContext.getRequiredOrganizationId());
+        List<ServiceRequest> allWithRelations = activeOnly
+                ? serviceRequestRepository.findOpenWithRelations(tenantContext.getRequiredOrganizationId())
+                : serviceRequestRepository.findAllWithRelations(tenantContext.getRequiredOrganizationId());
 
         // Filtrer selon le rôle
-        List<ServiceRequest> filtered = allWithRelations.stream()
+        List<ServiceRequest> filtered = allWithRelations.stream().filter(sr -> !"CONVERTED".equals(sr.getAssignmentPhase()))
             .filter(sr -> {
                 // Filtre par rôle
                 if (userRole == UserRole.HOST) {
@@ -702,11 +796,31 @@ public class ServiceRequestService {
             .collect(Collectors.toList());
 
         // Appliquer la pagination
-        int start = (int) pageable.getOffset();
+        int start = (int) Math.min(pageable.getOffset(), filtered.size());
         int end = Math.min(start + pageable.getPageSize(), filtered.size());
         List<ServiceRequest> pageContent = filtered.subList(start, end);
 
-        return new PageImpl<>(pageContent.stream().map(serviceRequestMapper::toDto).collect(Collectors.toList()), pageable, filtered.size());
+        return new PageImpl<>(readDtosWithMissionAssignment(pageContent), pageable, filtered.size());
+    }
+
+    /** Même projection pour détail, liste et recherche, sans recopier l’affectation en base. */
+    List<ServiceRequestDto> readDtosWithMissionAssignment(List<ServiceRequest> requests) {
+        if (requests.isEmpty()) return List.of();
+        var deadlines=assignments.activeDeadlines(requests.stream().map(ServiceRequest::getId).toList());
+        var missions = new java.util.HashMap<Long, Intervention>();
+        requests.stream().collect(Collectors.groupingBy(ServiceRequest::getOrganizationId))
+                .forEach((orgId, group) -> interventionRepository.findLinkedForServiceRequests(
+                        orgId, group.stream().map(ServiceRequest::getId).toList())
+                        .forEach(mission -> missions.put(mission.getServiceRequest().getId(), mission)));
+        var result = requests.stream().map(request -> {
+            ServiceRequestDto dto = serviceRequestMapper.toDto(request);
+            dto.assignmentExpiresAt=deadlines.get(request.getId());
+            Intervention mission = missions.get(request.getId());
+            if (mission != null) serviceRequestMapper.projectMissionAssignment(dto, mission);
+            return dto;
+        }).toList();
+        serviceRequestMapper.enrichPropertyPhotos(result);
+        return result;
     }
 
     private boolean isUserInTeam(Long userId, Long teamId) {
@@ -775,6 +889,7 @@ public class ServiceRequestService {
                                               Map<Long, String> teamNameMap) {
         Map<String, Object> map = new LinkedHashMap<>();
         map.put("id", sr.getId());
+        map.put("serviceItemCode", sr.getServiceItemCode());
         map.put("propertyId", sr.getProperty() != null ? sr.getProperty().getId() : null);
         map.put("propertyName", sr.getProperty() != null ? sr.getProperty().getName() : "");
         map.put("serviceType", sr.getServiceType() != null ? sr.getServiceType().name() : null);
@@ -815,131 +930,22 @@ public class ServiceRequestService {
         return map;
     }
 
+    private void requireDirectControl(ServiceRequest request) {
+        if (request.getMarketplaceRequestId() != null)
+            throw new IllegalStateException("Ce besoin est piloté par son devis marketplace ; utilisez la sollicitation liée");
+    }
+
     public void delete(Long id) {
-        if (!serviceRequestRepository.existsById(id)) throw new NotFoundException("Service request not found");
-        serviceRequestRepository.deleteById(id);
+        ServiceRequest request = serviceRequestRepository.findForMutation(id)
+            .orElseThrow(() -> new NotFoundException("Service request not found"));
+        requireOwnedServiceRequest(request);
+        requireDirectControl(request);
+        if (interventionRepository.existsByServiceRequestId(id))
+            throw new IllegalStateException("Une demande avec une mission conserve son historique");
+        serviceRequestRepository.delete(request);
     }
 
 
-
-    /**
-     * Mappe le type de service vers le type d'intervention
-     */
-    /**
-     * MM-3D — auto-assignation du meilleur pro (opt-in org, défaut FALSE).
-     * APRÈS la sélection d'équipe existante (le choix d'équipe ne change pas) :
-     * si la SR est un ménage, classe les membres HOUSEKEEPER de l'équipe et pose
-     * l'assignation sur le meilleur (assignedToType=user). Classement documenté :
-     *   1) score qualité 30 j décroissant ;
-     *   2) à score proche (±10 pts) : tarif résolu le plus PROCHE de la médiane
-     *      conseil (cohérent avec l'ancrage médiane — ni le moins cher ni le plus cher) ;
-     *   3) tie-break : le moins de missions ouvertes le jour de la demande (équilibrage).
-     * Gardes : jamais d'écrasement d'un user déjà assigné ; uniquement à la
-     * création auto. L'assignation user déclenche le tarif MM-2A (même logique
-     * que manualAssign) + push INTERVENTION_ASSIGNED_TO_USER (l'email MM-2B part
-     * à la création de l'intervention, hors périmètre SR).
-     */
-    private void maybeUpgradeToBestPro(ServiceRequest sr, Long teamId) {
-        try {
-            if (!cleaningPricingEngine.isAutoAssignBestProEnabled()) return;
-            if (sr.getServiceType() == null || !sr.getServiceType().isCleaningService()) return;
-            if (sr.getProperty() == null) return;
-
-            Team team = teamRepository.findById(teamId).orElse(null);
-            if (team == null || team.getMembers() == null || team.getMembers().isEmpty()) return;
-
-            Long orgId = sr.getOrganizationId();
-            java.time.LocalDateTime day = sr.getDesiredDate() != null ? sr.getDesiredDate() : LocalDateTime.now();
-            java.time.LocalDateTime dayStart = day.toLocalDate().atStartOfDay();
-            java.time.LocalDateTime dayEnd = dayStart.plusDays(1);
-            var median = cleaningPricingEngine
-                    .quote(sr.getProperty(), sr.getServiceType().name()).recommended();
-
-            record Candidate(User user, int score, java.math.BigDecimal rateDistance, long openCount) {}
-            java.util.List<Candidate> candidates = new java.util.ArrayList<>();
-            for (var member : team.getMembers()) {
-                User user = member.getUser();
-                if (user == null || user.getRole() != UserRole.HOUSEKEEPER) continue;
-                int score = housekeeperScoreService.computeScore(user.getId(), orgId).score();
-                var resolved = cleaningPricingEngine.resolveCleaningPrice(
-                        sr.getProperty(), sr.getServiceType().name(), user.getId());
-                java.math.BigDecimal distance = resolved.amount().subtract(median).abs();
-                long open = interventionRepository.countOpenOnDay(user.getId(), orgId, dayStart, dayEnd);
-                candidates.add(new Candidate(user, score, distance, open));
-            }
-            if (candidates.isEmpty()) return;
-
-            // Classement : score desc ; à ±10 pts, distance à la médiane asc ; puis charge asc.
-            candidates.sort((a, b) -> {
-                if (Math.abs(a.score() - b.score()) > 10) {
-                    return Integer.compare(b.score(), a.score());
-                }
-                int byDistance = a.rateDistance().compareTo(b.rateDistance());
-                if (byDistance != 0) return byDistance;
-                return Long.compare(a.openCount(), b.openCount());
-            });
-            User best = candidates.get(0).user();
-
-            // Garde absolue : jamais écraser une assignation USER existante.
-            if ("user".equals(sr.getAssignedToType())) return;
-
-            sr.setAssignedToType("user");
-            sr.setAssignedToId(best.getId());
-            // Tarif MM-2A : même logique que manualAssign (source HOUSEKEEPER_RATE seulement).
-            if (sr.getPaidAt() == null) {
-                var resolved = cleaningPricingEngine.resolveCleaningPrice(
-                        sr.getProperty(), sr.getServiceType().name(), best.getId());
-                if (resolved.source() == com.clenzy.service.pricing.CleaningPricingEngine.CleaningPriceSource.HOUSEKEEPER_RATE) {
-                    sr.setEstimatedCost(resolved.amount());
-                }
-            }
-            logAssignmentEvent(sr, "AUTO_BEST_PRO", best.getId(), "user",
-                    "Meilleur pro de l'equipe " + teamId + " (score qualite)");
-            if (best.getKeycloakId() != null) {
-                String remuneration = sr.getEstimatedCost() != null
-                        ? " Remuneration: " + sr.getEstimatedCost().stripTrailingZeros().toPlainString() + " EUR."
-                        : "";
-                notificationService.send(best.getKeycloakId(), NotificationKey.INTERVENTION_ASSIGNED_TO_USER,
-                        "Mission assignee",
-                        "Vous etes assigne a la mission '" + sr.getTitle() + "'." + remuneration,
-                        "/interventions?tab=service-requests&highlight=" + sr.getId(), orgId, requestFacts(sr));
-            }
-            log.info("Auto-assign best pro: user {} (team {}) for SR {}", best.getId(), teamId, sr.getId());
-        } catch (Exception e) {
-            // Best-effort : l'échec du sélecteur laisse l'assignation ÉQUIPE intacte.
-            log.warn("maybeUpgradeToBestPro failed for SR {}: {}", sr.getId(), e.getMessage());
-        }
-    }
-
-    private String mapServiceTypeToInterventionType(com.clenzy.model.ServiceType serviceType) {
-        if (serviceType == null) {
-            return InterventionType.PREVENTIVE_MAINTENANCE.name();
-        }
-
-        switch (serviceType) {
-            case CLEANING:
-            case EXPRESS_CLEANING:
-            case DEEP_CLEANING:
-            case WINDOW_CLEANING:
-            case FLOOR_CLEANING:
-            case KITCHEN_CLEANING:
-            case BATHROOM_CLEANING:
-            case EXTERIOR_CLEANING:
-            case DISINFECTION:
-                return InterventionType.CLEANING.name();
-            case PREVENTIVE_MAINTENANCE:
-            case EMERGENCY_REPAIR:
-            case ELECTRICAL_REPAIR:
-            case PLUMBING_REPAIR:
-            case HVAC_REPAIR:
-            case APPLIANCE_REPAIR:
-            case GARDENING:
-            case PEST_CONTROL:
-            case RESTORATION:
-            default:
-                return InterventionType.PREVENTIVE_MAINTENANCE.name();
-        }
-    }
 
     /**
      * Convertit une intervention en DTO
@@ -952,7 +958,7 @@ public class ServiceRequestService {
         dto.type = intervention.getType();
         dto.status = intervention.getStatus().name();
         dto.priority = intervention.getPriority();
-        dto.propertyId = intervention.getProperty().getId();
+        dto.propertyId = intervention.getProperty() == null ? null : intervention.getProperty().getId();
         if (intervention.getProperty() != null && intervention.getProperty().getType() != null) {
             dto.propertyType = intervention.getProperty().getType().name().toLowerCase();
         }
@@ -986,118 +992,7 @@ public class ServiceRequestService {
      * @return true si une equipe a ete trouvee et assignee
      */
     public boolean attemptAutoAssign(ServiceRequest sr) {
-        try {
-            // Verifier les preconditions
-            if (sr.getAssignedToId() != null || sr.getProperty() == null || sr.getDesiredDate() == null) {
-                return false;
-            }
-
-            // Verifier workflow settings de l'org
-            Long orgId = sr.getOrganizationId();
-            WorkflowSettings ws = workflowSettingsRepository.findByOrganizationId(orgId).orElse(null);
-            if (ws != null && !ws.isAutoAssignInterventions()) {
-                log.debug("Auto-assignation desactivee pour org={}", orgId);
-                return false;
-            }
-
-            String svcType = sr.getServiceType() != null ? sr.getServiceType().name() : null;
-            Optional<Long> availableTeamId = propertyTeamService.findAvailableTeamForProperty(
-                sr.getProperty().getId(), sr.getDesiredDate(), sr.getEstimatedDurationHours(), svcType
-            );
-
-            sr.setLastAutoAssignAttempt(LocalDateTime.now());
-
-            if (availableTeamId.isPresent()) {
-                sr.setAssignedToId(availableTeamId.get());
-                sr.setAssignedToType("team");
-                // MM-3D : si l'org a activé autoAssignBestPro, promeut le MEILLEUR
-                // housekeeper de l'équipe retenue en assignation user (opt-in,
-                // défaut false = comportement actuel strictement intact).
-                maybeUpgradeToBestPro(sr, availableTeamId.get());
-                // ASSIGNÉE, pas « en attente de paiement » : personne n'a encore
-                // travaillé. Le solde ne devient dû qu'après la validation du
-                // travail rendu — cf. manualAssign pour le raisonnement complet.
-                sr.setStatus(RequestStatus.ASSIGNED);
-                sr.setAutoAssignStatus("found");
-                serviceRequestRepository.save(sr);
-
-                logAssignmentEvent(sr, "AUTO_SUCCESS", availableTeamId.get(), "team", null);
-
-                log.info("Auto-assignment: team {} assigned to SR {} for property {}",
-                    availableTeamId.get(), sr.getId(), sr.getProperty().getId());
-
-                try {
-                    Team assignedTeam = teamRepository.findById(availableTeamId.get()).orElse(null);
-                    String teamName = assignedTeam != null ? assignedTeam.getName() : "Equipe #" + availableTeamId.get();
-                    notificationService.notifyAdminsAndManagers(
-                        NotificationKey.SERVICE_REQUEST_TEAM_ASSIGNED,
-                        "Demande auto-assignee",
-                        "La demande \"" + sr.getTitle() + "\" a ete auto-assignee a " + teamName,
-                        "/interventions?tab=service-requests&highlight=" + sr.getId(),
-                        requestFacts(sr));
-                    notifyHost(sr, NotificationKey.SERVICE_REQUEST_TEAM_ASSIGNED,
-                        "Equipe assignee",
-                        "Une equipe a ete assignee a votre demande \"" + sr.getTitle() + "\" — en attente de paiement");
-                } catch (Exception notifErr) {
-                    log.warn("Notification error auto-assignment: {}", notifErr.getMessage());
-                }
-
-                return true;
-            } else {
-                // Pas d'equipe trouvee
-                int currentRetry = (sr.getAutoAssignRetryCount() != null ? sr.getAutoAssignRetryCount() : 0) + 1;
-                sr.setAutoAssignRetryCount(currentRetry);
-                sr.setAutoAssignStatus(currentRetry >= MAX_AUTO_ASSIGN_RETRIES ? "exhausted" : "searching");
-                serviceRequestRepository.save(sr);
-
-                logAssignmentEvent(sr, "AUTO_FAIL", null, null,
-                    "Aucune equipe disponible (tentative " + currentRetry + "/" + MAX_AUTO_ASSIGN_RETRIES + ")");
-
-                log.debug("Auto-assignment: no team available for SR {} (retry {}/{})",
-                    sr.getId(), currentRetry, MAX_AUTO_ASSIGN_RETRIES);
-
-                // Notification premiere tentative
-                if (currentRetry == 1) {
-                    try {
-                        notificationService.notifyAdminsAndManagers(
-                            NotificationKey.SERVICE_REQUEST_NO_TEAM_AVAILABLE,
-                            "Aucune equipe disponible",
-                            "La demande \"" + sr.getTitle() + "\" n'a pas pu etre assignee. Retry automatique dans 15 min.",
-                            "/interventions?tab=service-requests&highlight=" + sr.getId(),
-                            requestFacts(sr));
-                        notifyHost(sr, NotificationKey.SERVICE_REQUEST_NO_TEAM_AVAILABLE,
-                            "Recherche en cours",
-                            "Nous recherchons une equipe pour votre demande \"" + sr.getTitle() + "\"");
-                    } catch (Exception e) {
-                        log.warn("Notification error NO_TEAM: {}", e.getMessage());
-                    }
-                }
-
-                // Escalade a MAX retries
-                if ("exhausted".equals(sr.getAutoAssignStatus())) {
-                    try {
-                        logAssignmentEvent(sr, "ESCALATION", null, null,
-                            "Retries epuises (" + MAX_AUTO_ASSIGN_RETRIES + ") — assignation manuelle requise");
-                        notificationService.notifyAdminsAndManagers(
-                            NotificationKey.SERVICE_REQUEST_ESCALATION,
-                            "ACTION REQUISE — Assignation manuelle",
-                            "La demande \"" + sr.getTitle() + "\" n'a pas pu etre assignee apres " + MAX_AUTO_ASSIGN_RETRIES + " tentatives. Assignation manuelle necessaire.",
-                            "/interventions?tab=service-requests&highlight=" + sr.getId(),
-                            requestFacts(sr));
-                        notifyHost(sr, NotificationKey.SERVICE_REQUEST_ESCALATION,
-                            "Assignation impossible",
-                            "Nous n'avons pas pu trouver d'equipe pour votre demande \"" + sr.getTitle() + "\". Un administrateur va intervenir.");
-                    } catch (Exception e) {
-                        log.warn("Notification error ESCALATION: {}", e.getMessage());
-                    }
-                }
-
-                return false;
-            }
-        } catch (Exception e) {
-            log.warn("Auto-assignment failed for SR {}: {} — SR stays PENDING", sr.getId(), e.getMessage());
-            return false;
-        }
+        return attemptAutoAssignByOrgId(sr, sr.getOrganizationId());
     }
 
     /**
@@ -1105,90 +1000,10 @@ public class ServiceRequestService {
      * Utilise la surcharge PropertyTeamService avec orgId explicite.
      */
     public boolean attemptAutoAssignByOrgId(ServiceRequest sr, Long orgId) {
-        try {
-            if (sr.getAssignedToId() != null || sr.getProperty() == null || sr.getDesiredDate() == null) {
-                return false;
-            }
-
-            String svcType = sr.getServiceType() != null ? sr.getServiceType().name() : null;
-            Optional<Long> availableTeamId = propertyTeamService.findAvailableTeamForProperty(
-                sr.getProperty().getId(), sr.getDesiredDate(), sr.getEstimatedDurationHours(), svcType, orgId
-            );
-
-            sr.setLastAutoAssignAttempt(LocalDateTime.now());
-
-            if (availableTeamId.isPresent()) {
-                sr.setAssignedToId(availableTeamId.get());
-                sr.setAssignedToType("team");
-                // MM-3D : si l'org a activé autoAssignBestPro, promeut le MEILLEUR
-                // housekeeper de l'équipe retenue en assignation user (opt-in,
-                // défaut false = comportement actuel strictement intact).
-                maybeUpgradeToBestPro(sr, availableTeamId.get());
-                // ASSIGNÉE, pas « en attente de paiement » : personne n'a encore
-                // travaillé. Le solde ne devient dû qu'après la validation du
-                // travail rendu — cf. manualAssign pour le raisonnement complet.
-                sr.setStatus(RequestStatus.ASSIGNED);
-                sr.setAutoAssignStatus("found");
-                serviceRequestRepository.save(sr);
-
-                logAssignmentEvent(sr, "AUTO_SUCCESS", availableTeamId.get(), "team", "Retry scheduler");
-
-                log.info("Auto-assignment (scheduler): team {} assigned to SR {}", availableTeamId.get(), sr.getId());
-
-                try {
-                    Team assignedTeam = teamRepository.findById(availableTeamId.get()).orElse(null);
-                    String teamName = assignedTeam != null ? assignedTeam.getName() : "Equipe #" + availableTeamId.get();
-                    notificationService.notifyAdminsAndManagersByOrgId(orgId,
-                        NotificationKey.SERVICE_REQUEST_TEAM_ASSIGNED,
-                        "Demande auto-assignee (retry)",
-                        "La demande \"" + sr.getTitle() + "\" a ete auto-assignee a " + teamName,
-                        "/interventions?tab=service-requests&highlight=" + sr.getId(),
-                        requestFacts(sr));
-                    notifyHostByOrgId(sr, orgId, NotificationKey.SERVICE_REQUEST_TEAM_ASSIGNED,
-                        "Equipe assignee",
-                        "Une equipe a ete assignee a votre demande \"" + sr.getTitle() + "\" — en attente de paiement");
-                } catch (Exception notifErr) {
-                    log.warn("Notification error auto-assignment scheduler: {}", notifErr.getMessage());
-                }
-
-                return true;
-            } else {
-                int retryCount = (sr.getAutoAssignRetryCount() != null ? sr.getAutoAssignRetryCount() : 0) + 1;
-                sr.setAutoAssignRetryCount(retryCount);
-                sr.setAutoAssignStatus(retryCount >= MAX_AUTO_ASSIGN_RETRIES ? "exhausted" : "searching");
-                serviceRequestRepository.save(sr);
-
-                logAssignmentEvent(sr, "AUTO_FAIL", null, null,
-                    "Scheduler retry " + retryCount + "/" + MAX_AUTO_ASSIGN_RETRIES);
-
-                log.debug("Auto-assignment (scheduler): no team for SR {} (retry {}/{})",
-                    sr.getId(), retryCount, MAX_AUTO_ASSIGN_RETRIES);
-
-                // Escalade a MAX retries
-                if ("exhausted".equals(sr.getAutoAssignStatus())) {
-                    try {
-                        logAssignmentEvent(sr, "ESCALATION", null, null,
-                            "Retries epuises — assignation manuelle requise");
-                        notificationService.notifyAdminsAndManagersByOrgId(orgId,
-                            NotificationKey.SERVICE_REQUEST_ESCALATION,
-                            "ACTION REQUISE — Assignation manuelle",
-                            "La demande \"" + sr.getTitle() + "\" n'a pas pu etre assignee apres " + MAX_AUTO_ASSIGN_RETRIES + " tentatives.",
-                            "/interventions?tab=service-requests&highlight=" + sr.getId(),
-                            requestFacts(sr));
-                        notifyHostByOrgId(sr, orgId, NotificationKey.SERVICE_REQUEST_ESCALATION,
-                            "Assignation impossible",
-                            "Nous n'avons pas pu trouver d'equipe pour votre demande \"" + sr.getTitle() + "\". Un administrateur va intervenir.");
-                    } catch (Exception e) {
-                        log.warn("Notification error ESCALATION scheduler: {}", e.getMessage());
-                    }
-                }
-
-                return false;
-            }
-        } catch (Exception e) {
-            log.warn("Auto-assignment scheduler failed for SR {}: {}", sr.getId(), e.getMessage());
-            return false;
-        }
+        assignments.requireOrganization(sr,orgId);
+        // Les anciens dossiers restent à qualifier ; aucune échéance rétroactive.
+        if (sr.getAssignmentPhase() == null) return false;
+        return assignments.search(sr.getId(),orgId);
     }
 
     // ── Flux deterministe : menage automatique post-checkout (fiche 08, F1a/F2a/F4d) ──
@@ -1277,6 +1092,7 @@ public class ServiceRequestService {
             + (checkIn != null ? checkIn : "?") + " au " + checkOut + "."
             + (reservationId != null ? " Reservation #" + reservationId + "." : ""));
         sr.setServiceType(ServiceType.CLEANING);
+        sr.setServiceItemCode(com.clenzy.service.pricing.ProviderTariffService.CLEANING);
         sr.setPriority(Priority.NORMAL);
         sr.setStatus(RequestStatus.PENDING);
         sr.setDesiredDate(desiredDate);
@@ -1319,11 +1135,7 @@ public class ServiceRequestService {
             log.warn("Notification error menage auto SR {}: {}", sr.getId(), e.getMessage());
         }
 
-        // Auto-assignation : meme garde-fou d'org que le flux web (workflow settings).
-        WorkflowSettings ws = workflowSettingsRepository.findByOrganizationId(orgId).orElse(null);
-        if (ws == null || ws.isAutoAssignInterventions()) {
-            attemptAutoAssignByOrgId(sr, orgId);
-        }
+        assignments.initialize(sr);
 
         return AutoCleaningOutcome.done(sr);
     }
@@ -1346,6 +1158,10 @@ public class ServiceRequestService {
             log.debug("Annulation menage auto: aucune demande pour {} — no-op", autoFlowKey);
             return AutoCleaningOutcome.skipped("aucune demande de menage auto pour ce sejour");
         }
+        sr = serviceRequestRepository.findForMutation(sr.getId()).orElse(null);
+        if (sr == null || !orgId.equals(sr.getOrganizationId()) || !autoFlowKey.equals(sr.getAutoFlowKey())) {
+            return AutoCleaningOutcome.skipped("demande modifiée pendant l'annulation du séjour");
+        }
         if (RequestStatus.IN_PROGRESS.equals(sr.getStatus())) {
             log.info("Annulation menage auto: demande {} deja commencee — laissee en l'etat", sr.getId());
             return AutoCleaningOutcome.skipped("demande " + sr.getId() + " deja commencee");
@@ -1355,7 +1171,15 @@ public class ServiceRequestService {
             return AutoCleaningOutcome.skipped("demande " + sr.getId() + " en statut " + sr.getStatus());
         }
 
+        var cancellation = cancellationCoordination.inspectLegacyCancellation(sr);
+        if (cancellation.blocker() != null) return AutoCleaningOutcome.skipped(cancellation.blocker());
+        var linkedMission = cancellation.mission();
+        if (linkedMission != null && linkedMission.getStatus() != InterventionStatus.PENDING
+                && linkedMission.getStatus() != InterventionStatus.CANCELLED)
+            return AutoCleaningOutcome.skipped("La mission liée exige une décision du gestionnaire");
+        if (linkedMission != null) linkedMission.setStatus(InterventionStatus.CANCELLED);
         sr.setStatus(RequestStatus.CANCELLED);
+        sr.setAutoAssignStatus(null);
         // Libere la cle : une re-reservation des memes dates recree un menage.
         sr.setAutoFlowKey(truncate(autoFlowKey + ":CANCELLED:" + sr.getId(), 120));
         serviceRequestRepository.save(sr);
